第五批 A：Javadoc 对齐（32 个文件）
从 2.0.x 同步缺失的方法级 Javadoc 到 1.0.x，确保 API 注释一致。

## 涉及文件
- 补充方法 Javadoc：20 个文件（BusinessType、ApiIdempotentType、LambdaCondition 等）
- 补充版权头 + 完善 Javadoc：12 个文件（Properties、Config 类等）
- 同时保留 bean-style getter 与 record-style 访问器共存

## 注意事项
JDK17+ record → JDK8 class 降级时，方法 Javadoc 在 JDK8 兼容的代码下保持完整。

## 验证
所有修改的 1.0.x 文件保留了之前添加的 bean-style getter，
同时补全了从 2.0.x 复制的方法级 Javadoc。